[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bip39 = "2.2.2"
derivation-path = "0.2.0"
mutex = "1.0.2"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
solana-derivation-path = "3.0.0"
solana-sdk = "4.0.0"
tokio = { version = "1.49.0", features = ["full"] }
